@@ -119,6 +119,9 @@
    - jakob@cvs.openbsd.org 2001/08/02 15:32:10
      [ssh.c]
      add smartcard to usage(). ok markus@
+   - jakob@cvs.openbsd.org 2001/08/02 15:43:57
+     [ssh-agent.c ssh.c ssh-keygen.c]
+     add /* SMARTCARD */ to #else/#endif. ok markus@
 
 20010803
  - (djm) Fix interrupted read in entropy gatherer. Spotted by markus@ on
@@ -6229,4 +6232,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1457 2001/08/06 21:53:42 mouring Exp $
+$Id: ChangeLog,v 1.1458 2001/08/06 21:57:31 mouring Exp $
